--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 anyio==3.6.2
 certifi==2022.12.7
-charset-normalizer==3.0.1
+cfgv==3.3.1
+distlib==0.3.6
 environs==9.5.0
+filelock==3.9.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
+identify==2.5.15
 idna==3.4
 marshmallow==3.19.0
+nodeenv==1.7.0
 packaging==23.0
+platformdirs==2.6.2
+pre-commit==3.0.1
 python-dotenv==0.21.1
 python-telegram-bot==20.0
+PyYAML==6.0
 rfc3986==1.5.0
 sniffio==1.3.0
-urllib3==1.26.14
+virtualenv==20.17.1
