--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,7 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.3.0
-  hooks:
-    - id: trailing-whitespace
 
-- repo: https://github.com/pycqa/isort
-  rev: 5.10.1
-  hooks:
-    - id: isort
-      args: [--settings, setup.cfg]
-
-- repo: https://github.com/ambv/black
-  rev: 22.8.0
+- repo: https://github.com/psf/black
+  rev: 22.12.0
   hooks:
     - id: black
       exclude: (migrations|config/settings/)
@@ -24,3 +14,10 @@ repos:
       additional_dependencies:
         - flake8-docstrings
       args: [--config, setup.cfg]
+
+- repo: https://github.com/pycqa/isort
+  rev: 5.10.1
+  hooks:
+    - id: isort
+      args: [--settings, setup.cfg]
+
