--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-telegram-bot = "^20.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.1"
+black = "^22.12.0"
 
 [build-system]
 requires = ["poetry-core"]
