--- a/.github/workflows/memebot_workflow_merged.yml
+++ b/.github/workflows/memebot_workflow_merged.yml
@@ -30,7 +30,5 @@ jobs:
             echo DESCRIPTION=${{ secrets.DESCRIPTION }} >> .env
             echo BOT_TOKEN=${{ secrets.BOT_TOKEN }} >> .env
             
-            python3 -m pip install poetry
-            poetry install
-            poetry shell
+            python3 -m pip install -r requirements.txt
             python3 bot.py
