--- a/.github/workflows/memebot_workflow_merged.yml
+++ b/.github/workflows/memebot_workflow_merged.yml
@@ -33,4 +33,4 @@ jobs:
             python3 -m pip install -r requirements.txt
             python3 alembic revision --message="Initial" --autogenerate
             python3 alembic upgrade head
-            python3 bot.py
+            python3 run_pulling.py
