--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,34 @@
 repos:
 
+-   repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.4.0
+    hooks:
+    -   id: add-trailing-comma
+
 - repo: https://github.com/psf/black
-  rev: 22.12.0
+  rev: 23.1.0
   hooks:
     - id: black
       exclude: (migrations|config/settings/)
       args: [--line-length=120]
 
-- repo: https://github.com/pycqa/flake8
-  rev: 5.0.4
+- repo: https://github.com/PyCQA/flake8
+  rev: 6.0.0
   hooks:
     - id: flake8
       additional_dependencies:
         - flake8-docstrings
       args: [--config, setup.cfg]
 
-- repo: https://github.com/pycqa/isort
-  rev: 5.10.1
+- repo: https://github.com/PyCQA/isort
+  rev: 5.12.0
   hooks:
     - id: isort
       args: [--settings, setup.cfg]
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.0.1
+    hooks:
+    -   id: mypy
+        additional_dependencies: [types-all]
 
