--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,4 +31,4 @@ repos:
   hooks:
     - id: mypy
       additional_dependencies: [types-all]
-      args: [--explicit-package-bases]
+      args: [--no-strict-optional, --ignore-missing-imports, --explicit-package-bases]
